<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="iak.segelaskopi.RatioActivity">
    <TextView
        android:id="@+id/textRasio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/rasio"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/spinnerRasio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textRasio"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

    </Spinner>

    <LinearLayout
        android:id="@+id/linearEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerRasio"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/kopi"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editKopi"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/_0"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="35sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/air"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editAir"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/_0"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="35sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/tombolHitungRasio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="Hitung"
        android:textSize="20sp"
        android:onClick="tombolHitungRasio"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tombolHitungRasio"
        android:id="@+id/garis1"
        android:layout_marginTop="20dp"
        android:background="#453a9a">

    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/garis1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/keteranganRasio"
            android:text="@string/app_name"
            android:textSize="20sp"/>
</RelativeLayout>
