<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="iak.segelaskopi.GramActivity">

    <TextView
        android:id="@+id/textRasio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/rasio"
        android:textColor="#7B1FA2"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinnerRasio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textRasio"

        android:layout_centerHorizontal="true">

    </Spinner>

    <LinearLayout
        android:id="@+id/linearEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerRasio"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/kopi"
                android:textColor="#AB47BC"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextKopi"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/_0"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="#9C27B0"
                android:textColorHint="#E1BEE7"
                android:textSize="50sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/air"
                android:textColor="#AB47BC"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextAir"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/_0"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="#9C27B0"
                android:textColorHint="#E1BEE7"
                android:textSize="50sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/tombolHitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:padding="30dp"
        android:background="@drawable/backgroundtombol"
        android:onClick="tombolHitung"
        android:text="Hitung"
        android:textColor="#F3E5F5"
        android:textSize="20sp" />
</RelativeLayout>
